Changed JVM MaxPermSize to prevent OutOfMemory errors